# ml_take_home

./: .gitignore  READ.md  README.md  download_coco.py  mcp.json  pyproject.toml  requirements.txt  test_aug_train.py  test_collect.py  test_collect_savedata.py  test_infer.py  test_mixed_dataset.py
app/: dataset.py  llm_labeler.py  llm_semantic.py  main.py  model.py  schemas.py  training.py
app/routers/: collect.py  infer.py
app/schemas/: collect.py  infer.py
app/services/: dataset.py  trainer.py  yolo_service.py
client/: __init__.py  api.py  cli.py  client.py
data/coco/annotations/: instances_train2017.json
data/new/: index.json
data/new/labels/: 1756398744163.json  1756405812744.json  1756405812878.json  1756405812905.json  1756405812939.json  1756405812978.json  1756405813014.json  1756405813052.json  1756405813086.json  1756405813132.json  1756405813206.json  1756405813247.json  1756405813289.json  1756405813341.json  1756405813416.json  1756405813492.json  1756405813580.json  1756405813645.json  1756405813717.json  1756405813793.json  1756405813859.json  1756405813930.json  1756405814005.json  1756405814097.json  1756405814178.json  1756405814247.json  1756405814310.json  1756405814368.json  1756405814446.json  1756405814541.json  1756405814607.json  1756405814697.json  1756405814777.json  1756405814831.json  1756405814866.json  1756405814899.json  1756405814943.json  1756405814981.json  1756405815027.json  1756405815064.json  (+89 more)
data_collector/: __init__.py  app.py  coco_handler.py  dataset_manager.py
inference/: __init__.py  app.py  augmentation.py  models.py  training.py
ml_take_home.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: client_collect.py  client_infer.py
tests/: __init__.py  test_client.py  test_inference.py
training_pipeline/: __init__.py  continual_loss.py  dynamic_head.py  protective_hooks.py  scheduler.py  trainer.py
