[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_take_home"
version = "0.1.0"
description = "YOLOv8 object detection service with incremental training and data collection"
authors = [{name = "Ganesh Siripuram"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "numpy>=1.24",
    "opencv-python>=4.7",
    "torch>=2.1",
    "timm>=0.9",
    "ultralytics>=8.0",
    "httpx>=0.24",
    "click>=8.1",
    "pydantic>=2.0",
    "openai>=0.27"  # optional, remove if using mocked LLM
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "client*"]

[project.scripts]
mlcli = "cli:main"
